# TradingAgents

./: .env.example  .gitignore  main.py  pyproject.toml
cli/: main.py  utils.py
tests/: conftest.py  test_api_key_env.py
tradingagents/llm_clients/: api_key_env.py  factory.py  model_catalog.py  openai_client.py
